--- a/src/components/ReusableComponents/navbar/navbar.scss
+++ b/src/components/ReusableComponents/navbar/navbar.scss
@@ -6,6 +6,11 @@
   display: flex;
   align-items: center;
   padding: 16px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
 
   a {
     margin-right: 8px;
